--- a/index.html
+++ b/index.html
@@ -1,5 +1,190 @@
-<html>
-  <body>
-    <p>Hello World!</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  	<meta charset="UTF-8">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" href="css/bootstrap.min.css">
+  	<link rel="stylesheet" href="css/styles.css">
+  	<title>Excavation Daudelin</title>
+</head>
+<body>
+
+	<nav class="navbar navbar-default">
+		<div class="navbar=header">
+			<button type="button" 
+				class="navbar-toggle collapsed" 
+				data-toggle="collapse" 
+				data-target="#collapsemenu"
+				aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>	
+				<span class="icon-bar"></span>	
+				<span class="icon-bar"></span>
+			</button>
+		</div>
+		<div class="collapse navbar-collapse" id="collapsemenu">
+			<div class="container">
+				<ul class="nav navbar-nav">
+					<li><a href="#">Accueil</a></li>
+					<li><a href="#">Services</a></li>
+					<li><a href="#">Projets</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+<div class="jumbotron">
+  <div class="container">
+    <h1>Excavation François Daudelin</h1>
+    <p>Vous avez un projet de construction, d'aménagement paysagiste, de terrassement ou des changements à effectuer ou encore un problème quelconque de drainage ou extraction de dalles ou de souches? Nous avons l'expertise pour vous aider.</p>
+  </div>
+</div>
+
+<div class="container">
+	<h1>Équipement</h1>
+	 <p>Excavatrice de grosseur intermédiaire de 12000 lbs avec traction de caoutchouc. Largeur totale 78 pouces, Portée de 21 pieds Godets réversibles de 16, 30 et 48 pouces Pouce hydraulique. Charge facilement les camions de 10 roues
+	 </p>
+	 <div class="row">
+	 	<div class="col-sm-4">
+	 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/pelle_01.jpg" class="img-responsive img-rounded" alt="pelle_01"></a>
+	 		<div id="myModal_01" class="modal fade" tabindex="-1" role="dialog">
+	  			<div class="modal-dialog">
+	    			<div class="modal-content">
+	        			<div class="modal-header">
+        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      					</div>
+	        			<div class="modal-body">
+	            			<img src="images/pelle_01.jpg" class="img-responsive">
+	        			</div>
+	    			</div>
+	  			</div>
+			</div>
+	 	</div>
+	 	<div class="col-sm-4">
+	 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/pelle_02.jpg" class="img-responsive img-rounded" alt="pelle_02"></a>
+	 		<div id="myModal_02" class="modal fade" tabindex="-1" role="dialog">
+	  			<div class="modal-dialog">
+	    			<div class="modal-content">
+	        			<div class="modal-header">
+        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      					</div>
+	        			<div class="modal-body">
+	            			<img src="images/pelle_02.jpg" class="img-responsive">
+	        			</div>
+	    			</div>
+	  			</div>
+			</div>
+	 	</div>
+	 	<div class="col-sm-4">
+	 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/pelle_03.jpg" class="img-responsive img-rounded" alt="pelle_03"></a>
+	 		<div id="myModal_03" class="modal fade" tabindex="-1" role="dialog">
+	  			<div class="modal-dialog">
+	    			<div class="modal-content">
+	        			<div class="modal-header">
+        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      					</div>
+	        			<div class="modal-body">
+	            			<img src="images/pelle_03.jpg" class="img-responsive">
+	        			</div>
+	    			</div>
+	  			</div>
+			</div>
+	 	</div>
+	 </div>
+
+</div>
+
+<div class="container">
+	<h1>Réalisations</h1>
+	 <div class="row">
+	 	<div class="col-sm-4">
+	 		<a href="#" data-toggle="modal" data-target="#myProjetModal_01"> <img src="images/projet_01.jpg" class="img-responsive img-rounded" alt="projet_01"></a>
+	 		<div id="myProjetModal_01" class="modal fade" tabindex="-1" role="dialog">
+	  			<div class="modal-dialog">
+	    			<div class="modal-content">
+	        			<div class="modal-header">
+        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      					</div>
+	        			<div class="modal-body">
+	            			<img src="images/projet_01.jpg" class="img-responsive">
+	        			</div>
+	    			</div>
+	  			</div>
+			</div>
+	 	</div>
+	 	<div class="col-sm-4">
+	 		<a href="#" data-toggle="modal" data-target="#myProjetModal_02"> <img src="images/projet_02.jpg" class="img-responsive img-rounded" alt="projet_02"></a>
+	 		<div id="myProjetModal_02" class="modal fade" tabindex="-1" role="dialog">
+	  			<div class="modal-dialog">
+	    			<div class="modal-content">
+	        			<div class="modal-header">
+        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      					</div>
+	        			<div class="modal-body">
+	            			<img src="images/projet_02.jpg" class="img-responsive">
+	        			</div>
+	    			</div>
+	  			</div>
+			</div>
+	 	</div>
+	 	<div class="col-sm-4">
+	 		<a href="#" data-toggle="modal" data-target="#myProjetModal_03"> <img src="images/projet_03.jpg" class="img-responsive img-rounded" alt="projet_03"></a>
+	 		<div id="myProjetModal_03" class="modal fade" tabindex="-1" role="dialog">
+	  			<div class="modal-dialog">
+	    			<div class="modal-content">
+	        			<div class="modal-header">
+        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      					</div>
+	        			<div class="modal-body">
+	            			<img src="images/projet_03.jpg" class="img-responsive">
+	        			</div>
+	    			</div>
+	  			</div>
+			</div>
+	 	</div>
+	 </div>
+
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+          	<h2>Services</h2>
+          	<ul>
+          		<li>Terrassement brut</li>
+          		<li>Drainage de tout genre</li>
+          		<li>Entrée de cour</li>
+          		<li>Mur de soutènement</li>
+          		<li>Murs de pierres naturelles</li>
+          		<li>Champs d'épuration</li>
+          	</ul>
+        </div>
+        <div class="col-md-4">
+          	<h2>Accréditations</h2>
+          	<ul>
+          		<li>Bionest</li>
+          	</ul>
+       </div>
+       <div class="col-md-4">
+          <h2>Contact</h2>
+          <p>François Daudelin</p>
+          <p>450-123-4567</p>
+          <p>RBQ: 5718-9367-01</p>
+       </div>
+    </div>
+
+    <hr>
+
+	<footer>
+		<p>&copy; 2017 2735 7250 Québec Inc.</p>
+	</footer>
+
+ </div> <!-- /container -->
+
+<script src="js/jquery-1.12.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
+</body>
 </html>
