--- a/index.html
+++ b/index.html
@@ -10,34 +10,10 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-default">
-		<div class="navbar=header">
-			<button type="button" 
-				class="navbar-toggle collapsed" 
-				data-toggle="collapse" 
-				data-target="#collapsemenu"
-				aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>	
-				<span class="icon-bar"></span>	
-				<span class="icon-bar"></span>
-			</button>
-		</div>
-		<div class="collapse navbar-collapse" id="collapsemenu">
-			<div class="container">
-				<ul class="nav navbar-nav">
-					<li><a href="#">Accueil</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Projets</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
 <div class="jumbotron">
   <div class="container">
-    <h1>Excavation François Daudelin</h1>
+  	<h1 class="text-center">Excavation François Daudelin</h1>
+  	<img src="images/banner.jpg" class="img-responsive">
     <p>Vous avez un projet de construction, d'aménagement paysagiste, de terrassement ou des changements à effectuer ou encore un problème quelconque de drainage ou extraction de dalles ou de souches? Nous avons l'expertise pour vous aider.</p>
   </div>
 </div>
