--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <div class="jumbotron">
   <div class="container">
-  	<h1 class="text-center">Excavation François Daudelin</h1>
-  	<img src="images/banner.jpg" class="img-responsive">
-    <p>Vous avez un projet de construction, d'aménagement paysagiste, de terrassement ou des changements à effectuer ou encore un problème quelconque de drainage ou extraction de dalles ou de souches? Nous avons l'expertise pour vous aider.</p>
+  	<h1 style="color:#8a6d3b;" class="text-center text-uppercase">Mini Excavation</h1>
+  	<h1 style="color:#8a6d3b;margin-top: 0px;" class="text-center">François Daudelin</h1>
+    <p style="color: #ccc;" class="text-center">Vous avez un projet de construction, d'aménagement paysagiste, de terrassement ou des changements à effectuer ou encore un problème quelconque de drainage ou extraction de dalles ou de souches? Nous avons l'expertise pour vous aider.</p>
   </div>
 </div>
 
