--- a/index.html
+++ b/index.html
@@ -12,152 +12,157 @@
 
 <div class="jumbotron">
   <div class="container">
-  	<h1 style="color:#8a6d3b;" class="text-center text-uppercase">Mini Excavation</h1>
-  	<h1 style="color:#8a6d3b;margin-top: 0px;" class="text-center">François Daudelin</h1>
+  	<h1 style="color:#f2b03a;" class="text-center text-uppercase">Mini Excavation</h1>
+  	<h1 style="color:#f2b03a;margin-top: 0px;" class="text-center">François Daudelin</h1>
+  	<h2 style="color: #ccc;" class="text-center">450-123-4567</h2>
     <p style="color: #ccc;" class="text-center">Vous avez un projet de construction, d'aménagement paysagiste, de terrassement ou des changements à effectuer ou encore un problème quelconque de drainage ou extraction de dalles ou de souches? Nous avons l'expertise pour vous aider.</p>
   </div>
 </div>
 
-<div class="container">
-	<h1>Équipement</h1>
-	 <p>Excavatrice de grosseur intermédiaire de 12000 lbs avec traction de caoutchouc. Largeur totale 78 pouces, Portée de 21 pieds Godets réversibles de 16, 30 et 48 pouces Pouce hydraulique. Charge facilement les camions de 10 roues
-	 </p>
-	 <div class="row">
-	 	<div class="col-sm-4">
-	 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/pelle_01.jpg" class="img-responsive img-rounded" alt="pelle_01"></a>
-	 		<div id="myModal_01" class="modal fade" tabindex="-1" role="dialog">
-	  			<div class="modal-dialog">
-	    			<div class="modal-content">
-	        			<div class="modal-header">
-        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      					</div>
-	        			<div class="modal-body">
-	            			<img src="images/pelle_01.jpg" class="img-responsive">
-	        			</div>
-	    			</div>
-	  			</div>
-			</div>
-	 	</div>
-	 	<div class="col-sm-4">
-	 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/pelle_02.jpg" class="img-responsive img-rounded" alt="pelle_02"></a>
-	 		<div id="myModal_02" class="modal fade" tabindex="-1" role="dialog">
-	  			<div class="modal-dialog">
-	    			<div class="modal-content">
-	        			<div class="modal-header">
-        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      					</div>
-	        			<div class="modal-body">
-	            			<img src="images/pelle_02.jpg" class="img-responsive">
-	        			</div>
-	    			</div>
-	  			</div>
-			</div>
-	 	</div>
-	 	<div class="col-sm-4">
-	 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/pelle_03.jpg" class="img-responsive img-rounded" alt="pelle_03"></a>
-	 		<div id="myModal_03" class="modal fade" tabindex="-1" role="dialog">
-	  			<div class="modal-dialog">
-	    			<div class="modal-content">
-	        			<div class="modal-header">
-        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      					</div>
-	        			<div class="modal-body">
-	            			<img src="images/pelle_03.jpg" class="img-responsive">
-	        			</div>
-	    			</div>
-	  			</div>
-			</div>
-	 	</div>
+<section>
+	<div class="container">
+		<h1>Équipement</h1>
+		 <p>Excavatrice de grosseur intermédiaire de 12000 lbs avec traction de caoutchouc. Largeur totale 78 pouces, Portée de 21 pieds Godets réversibles de 16, 30 et 48 pouces Pouce hydraulique. Charge facilement les camions de 10 roues
+		 </p>
+		 <div class="row">
+		 	<div class="col-sm-4">
+		 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/pelle_01.jpg" class="img-responsive img-rounded" alt="pelle_01"></a>
+		 		<div id="myModal_01" class="modal fade" tabindex="-1" role="dialog">
+		  			<div class="modal-dialog">
+		    			<div class="modal-content">
+		        			<div class="modal-header">
+	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      					</div>
+		        			<div class="modal-body">
+		            			<img src="images/pelle_01.jpg" class="img-responsive">
+		        			</div>
+		    			</div>
+		  			</div>
+				</div>
+		 	</div>
+		 	<div class="col-sm-4">
+		 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/pelle_02.jpg" class="img-responsive img-rounded" alt="pelle_02"></a>
+		 		<div id="myModal_02" class="modal fade" tabindex="-1" role="dialog">
+		  			<div class="modal-dialog">
+		    			<div class="modal-content">
+		        			<div class="modal-header">
+	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      					</div>
+		        			<div class="modal-body">
+		            			<img src="images/pelle_02.jpg" class="img-responsive">
+		        			</div>
+		    			</div>
+		  			</div>
+				</div>
+		 	</div>
+		 	<div class="col-sm-4">
+		 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/pelle_03.jpg" class="img-responsive img-rounded" alt="pelle_03"></a>
+		 		<div id="myModal_03" class="modal fade" tabindex="-1" role="dialog">
+		  			<div class="modal-dialog">
+		    			<div class="modal-content">
+		        			<div class="modal-header">
+	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      					</div>
+		        			<div class="modal-body">
+		            			<img src="images/pelle_03.jpg" class="img-responsive">
+		        			</div>
+		    			</div>
+		  			</div>
+				</div>
+		 	</div>
+		 </div>
+	</div>
+</section>
+
+<section>
+	<div class="container">
+		<h1>Réalisations</h1>
+		 <div class="row">
+		 	<div class="col-sm-4">
+		 		<a href="#" data-toggle="modal" data-target="#myProjetModal_01"> <img src="images/projet_01.jpg" class="img-responsive img-rounded" alt="projet_01"></a>
+		 		<div id="myProjetModal_01" class="modal fade" tabindex="-1" role="dialog">
+		  			<div class="modal-dialog">
+		    			<div class="modal-content">
+		        			<div class="modal-header">
+	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      					</div>
+		        			<div class="modal-body">
+		            			<img src="images/projet_01.jpg" class="img-responsive">
+		        			</div>
+		    			</div>
+		  			</div>
+				</div>
+		 	</div>
+		 	<div class="col-sm-4">
+		 		<a href="#" data-toggle="modal" data-target="#myProjetModal_02"> <img src="images/projet_02.jpg" class="img-responsive img-rounded" alt="projet_02"></a>
+		 		<div id="myProjetModal_02" class="modal fade" tabindex="-1" role="dialog">
+		  			<div class="modal-dialog">
+		    			<div class="modal-content">
+		        			<div class="modal-header">
+	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      					</div>
+		        			<div class="modal-body">
+		            			<img src="images/projet_02.jpg" class="img-responsive">
+		        			</div>
+		    			</div>
+		  			</div>
+				</div>
+		 	</div>
+		 	<div class="col-sm-4">
+		 		<a href="#" data-toggle="modal" data-target="#myProjetModal_03"> <img src="images/projet_03.jpg" class="img-responsive img-rounded" alt="projet_03"></a>
+		 		<div id="myProjetModal_03" class="modal fade" tabindex="-1" role="dialog">
+		  			<div class="modal-dialog">
+		    			<div class="modal-content">
+		        			<div class="modal-header">
+	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      					</div>
+		        			<div class="modal-body">
+		            			<img src="images/projet_03.jpg" class="img-responsive">
+		        			</div>
+		    			</div>
+		  			</div>
+				</div>
+		 	</div>
+		 </div>
+	</div>
+</section>
+
+<section>
+	<div class="container">
+	    <div class="row">
+	        <div class="col-md-4">
+	          	<h2>Services</h2>
+	          	<ul>
+	          		<li>Terrassement brut</li>
+	          		<li>Drainage de tout genre</li>
+	          		<li>Entrée de cour</li>
+	          		<li>Mur de soutènement</li>
+	          		<li>Murs de pierres naturelles</li>
+	          		<li>Champs d'épuration</li>
+	          	</ul>
+	        </div>
+	        <div class="col-md-4">
+	          	<h2>Accréditations</h2>
+	          	<ul>
+	          		<li>Bionest</li>
+	          	</ul>
+	       </div>
+	       <div class="col-md-4">
+	          <h2>Contact</h2>
+	          <p>François Daudelin</p>
+	          <p>450-123-4567</p>
+	          <p>RBQ: 5718-9367-01</p>
+	       </div>
+	    </div>
+
+	    <hr>
+
+		<footer>
+			<p class="text-center text-muted">&copy; 2017 2735 7250 Québec Inc.</p>
+		</footer>
+
 	 </div>
-
-</div>
-
-<div class="container">
-	<h1>Réalisations</h1>
-	 <div class="row">
-	 	<div class="col-sm-4">
-	 		<a href="#" data-toggle="modal" data-target="#myProjetModal_01"> <img src="images/projet_01.jpg" class="img-responsive img-rounded" alt="projet_01"></a>
-	 		<div id="myProjetModal_01" class="modal fade" tabindex="-1" role="dialog">
-	  			<div class="modal-dialog">
-	    			<div class="modal-content">
-	        			<div class="modal-header">
-        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      					</div>
-	        			<div class="modal-body">
-	            			<img src="images/projet_01.jpg" class="img-responsive">
-	        			</div>
-	    			</div>
-	  			</div>
-			</div>
-	 	</div>
-	 	<div class="col-sm-4">
-	 		<a href="#" data-toggle="modal" data-target="#myProjetModal_02"> <img src="images/projet_02.jpg" class="img-responsive img-rounded" alt="projet_02"></a>
-	 		<div id="myProjetModal_02" class="modal fade" tabindex="-1" role="dialog">
-	  			<div class="modal-dialog">
-	    			<div class="modal-content">
-	        			<div class="modal-header">
-        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      					</div>
-	        			<div class="modal-body">
-	            			<img src="images/projet_02.jpg" class="img-responsive">
-	        			</div>
-	    			</div>
-	  			</div>
-			</div>
-	 	</div>
-	 	<div class="col-sm-4">
-	 		<a href="#" data-toggle="modal" data-target="#myProjetModal_03"> <img src="images/projet_03.jpg" class="img-responsive img-rounded" alt="projet_03"></a>
-	 		<div id="myProjetModal_03" class="modal fade" tabindex="-1" role="dialog">
-	  			<div class="modal-dialog">
-	    			<div class="modal-content">
-	        			<div class="modal-header">
-        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      					</div>
-	        			<div class="modal-body">
-	            			<img src="images/projet_03.jpg" class="img-responsive">
-	        			</div>
-	    			</div>
-	  			</div>
-			</div>
-	 	</div>
-	 </div>
-
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-4">
-          	<h2>Services</h2>
-          	<ul>
-          		<li>Terrassement brut</li>
-          		<li>Drainage de tout genre</li>
-          		<li>Entrée de cour</li>
-          		<li>Mur de soutènement</li>
-          		<li>Murs de pierres naturelles</li>
-          		<li>Champs d'épuration</li>
-          	</ul>
-        </div>
-        <div class="col-md-4">
-          	<h2>Accréditations</h2>
-          	<ul>
-          		<li>Bionest</li>
-          	</ul>
-       </div>
-       <div class="col-md-4">
-          <h2>Contact</h2>
-          <p>François Daudelin</p>
-          <p>450-123-4567</p>
-          <p>RBQ: 5718-9367-01</p>
-       </div>
-    </div>
-
-    <hr>
-
-	<footer>
-		<p>&copy; 2017 2735 7250 Québec Inc.</p>
-	</footer>
-
- </div> <!-- /container -->
+ </section>
 
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
