--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <div class="container">
   	<h1 style="color:#f2b03a;" class="text-center text-uppercase">Mini Excavation</h1>
   	<h1 style="color:#f2b03a;margin-top: 0px;" class="text-center">François Daudelin</h1>
-  	<h2 style="color: #ccc;" class="text-center">450-123-4567</h2>
-    <p style="color: #ccc;" class="text-center">Vous avez un projet de construction, d'aménagement paysagiste, de terrassement ou des changements à effectuer ou encore un problème quelconque de drainage ou extraction de dalles ou de souches? Nous avons l'expertise pour vous aider.</p>
+  	<h2 style="color: #ccc;" class="text-center">450-558-8868</h2>
   </div>
 </div>
 
@@ -133,36 +132,76 @@
 	        <div class="col-md-4">
 	          	<h2>Services</h2>
 	          	<ul>
-	          		<li>Terrassement brut</li>
-	          		<li>Drainage de tout genre</li>
-	          		<li>Entrée de cour</li>
-	          		<li>Mur de soutènement</li>
-	          		<li>Murs de pierres naturelles</li>
-	          		<li>Champs d'épuration</li>
+	          		<li>Terrassement</li>
+	          		<li>Drainage</li>
+	          		<li>Muret de roches</li>
+	          		<li>Patio et trottoir en dalles</li>
+	          		<li>Et plus</li>
 	          	</ul>
 	        </div>
 	        <div class="col-md-4">
 	          	<h2>Accréditations</h2>
 	          	<ul>
-	          		<li>Bionest</li>
+	          		<li><i>Ajouter...</i></li>
 	          	</ul>
 	       </div>
 	       <div class="col-md-4">
 	          <h2>Contact</h2>
-	          <p>François Daudelin</p>
-	          <p>450-123-4567</p>
-	          <p>RBQ: 5718-9367-01</p>
+	          <address>
+	          	François Daudelin<br>
+	          	450-558-8868<br>
+	          	85, rue Paquette,<br>
+	          	Shefford<br>
+	          	QC J2M 1X7<br>
+	          </address>
+	          <p><strong>RBQ: 5718-9367-01</strong><br>
+	          membre APCHQ</p>
 	       </div>
 	    </div>
-
-	    <hr>
-
-		<footer>
-			<p class="text-center text-muted">&copy; 2017 2735 7250 Québec Inc.</p>
-		</footer>
-
 	 </div>
  </section>
+
+<section>
+	<div class="container">
+		 <table class="table table-condensed">
+		 	<thead>
+		 		<tr>
+					<td class="text-uppercase">Heures d'ouverture</td>
+	 			</tr>
+		 	</thead>
+		 	<tbody>
+		 		<tr>
+		 			<td>Lundi</td>
+		 			<td>07:00-18:00</td>
+		 		</tr>
+		 		<tr>
+		 			<td>Mardi</td>
+		 			<td>07:00-18:00</td>
+		 		</tr>
+		 		<tr>
+		 			<td>Mercredi</td>
+		 			<td>07:00-18:00</td>
+		 		</tr>
+		 			<td>Jeudi</td>
+		 			<td>07:00-18:00</td>
+		 		</tr>
+		 		<tr>
+		 			<td>Vendredi</td>
+		 			<td>07:00-18:00</td>
+		 		</tr>	
+		 		<tr>
+		 			<td>Samedi</td>
+		 			<td>08:00-16:00</td>
+		 		</tr>	
+		 	</tbody>
+		 </table>
+	</div>
+</section>
+
+<hr>
+<footer>
+	<p class="text-center text-muted">&copy; 2017 2735 7250 Québec Inc.</p>
+</footer>
 
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
