--- a/index.html
+++ b/index.html
@@ -156,47 +156,34 @@
 	          </address>
 	          <p><strong>RBQ: 5718-9367-01</strong><br>
 	          membre APCHQ</p>
+
+	          <small>
+				 <table class="table table-condensed">
+				 	<thead>
+				 		<tr>
+							<td class="text-uppercase">Heures d'ouverture</td>
+			 			</tr>
+				 	</thead>
+				 	<tbody>
+				 		<tr>
+				 			<td>Lundi au vendredi</td>
+				 			<td>07:00-18:00</td>
+				 		</tr>	
+				 		<tr>
+				 			<td>Samedi</td>
+				 			<td>08:00-16:00</td>
+				 		</tr>	
+				 		<tr>
+				 			<td>Dimanche</td>
+				 			<td>Fermé</td>
+				 		</tr>	
+				 	</tbody>
+				 </table>
+			 </small>
 	       </div>
 	    </div>
 	 </div>
  </section>
-
-<section>
-	<div class="container">
-		 <table class="table table-condensed">
-		 	<thead>
-		 		<tr>
-					<td class="text-uppercase">Heures d'ouverture</td>
-	 			</tr>
-		 	</thead>
-		 	<tbody>
-		 		<tr>
-		 			<td>Lundi</td>
-		 			<td>07:00-18:00</td>
-		 		</tr>
-		 		<tr>
-		 			<td>Mardi</td>
-		 			<td>07:00-18:00</td>
-		 		</tr>
-		 		<tr>
-		 			<td>Mercredi</td>
-		 			<td>07:00-18:00</td>
-		 		</tr>
-		 			<td>Jeudi</td>
-		 			<td>07:00-18:00</td>
-		 		</tr>
-		 		<tr>
-		 			<td>Vendredi</td>
-		 			<td>07:00-18:00</td>
-		 		</tr>	
-		 		<tr>
-		 			<td>Samedi</td>
-		 			<td>08:00-16:00</td>
-		 		</tr>	
-		 	</tbody>
-		 </table>
-	</div>
-</section>
 
 <hr>
 <footer>
