--- a/index.html
+++ b/index.html
@@ -1,29 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  	<meta charset="UTF-8">
-  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  	<meta name="viewport" content="width=device-width, initial-scale=1">
-  	<link rel="stylesheet" href="css/bootstrap.min.css">
-  	<link rel="stylesheet" href="css/styles.css">
-  	<title>Excavation Daudelin</title>
+	<meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1">
+ 	<link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Mini Excavation Daudelin</title>
 </head>
 <body>
+
+<nav class="navbar navbar-default">
+	<div class="navbar=header">
+		<button type="button" 
+			class="navbar-toggle collapsed" 
+			data-toggle="collapse" 
+			data-target="#collapsemenu"
+			aria-expanded="false">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>	
+			<span class="icon-bar"></span>	
+			<span class="icon-bar"></span>
+		</button>
+	</div>
+
+	<div class="collapse navbar-collapse" id="collapsemenu">
+		<div class="container">
+			<ul class="nav navbar-nav">
+				<li class="text-uppercase"><a href="#services">Services</a></li>
+				<li class="text-uppercase"><a href="#projets">Réalisations</a></li>
+				<li class="text-uppercase"><a href="#contact">Contact</a></li>
+			</ul>
+			<p class="navbar-text navbar-right"><strong>450-558-8868</strong></p>
+		</div>
+	</div>
+</nav>
 
 <div class="jumbotron">
   <div class="container">
   	<h1 style="color:#f2b03a;" class="text-center text-uppercase">Mini Excavation</h1>
-  	<h1 style="color:#f2b03a;margin-top: 0px;" class="text-center">François Daudelin</h1>
-  	<h2 style="color: #ccc;" class="text-center">450-558-8868</h2>
+  	<h1 style="color:#f2b03a;margin-top: 0px;" class="text-center">Daudelin</h1>
   </div>
 </div>
 
 <section>
 	<div class="container">
-		<h1>Équipement</h1>
+		<h3 class="text-center">Située à Shefford, Mini Excavation Daudelin offre les services d'excavation, terrassement et transport en vrac.  Contactez-nous maintenant, faites confiance à l'équipe Daudelin!</h3>
+		<br>
+		<hr style="border-color:#353535;">
+		<br>
+		<h1 class="text-uppercase" id="services">Services</h1>
+		<br>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-4">
+				<h3 class="text-uppercase">Excavation</h3>
+				<br>
+				<p>Confiez-nous vos projets d'excavation en tout genre</p>
+				<ul>
+					<li>Drainage</li>
+					<li>Tranchées de toutes sortes
+     			<ul>
+	     			<li>conduit électrique</li>
+	     			<li>entrée d'eau</li>
+	     			<li>renvoie de drain français</li> 
+	     			<li>et plus</li>
+	     		</ul>
+	     		</li>
+				</ul>
+			</div>
+
+			<div class="col-sm-4">
+				<h3 class="text-uppercase">Terrassement</h3>
+				<br>
+				<p>Nous pouvons réaliser vos projets de terrassement</p>
+				<ul>
+				 	<li>Muret de roches</li>
+	     		<li>Patio et trottoir en dalles</li>
+	     		<li>et plus</li>
+	     	</ul>
+			</div>
+
+			<div class="col-sm-4">
+				<h3 class="text-uppercase">Transport</h3>
+				<br>
+				<p>Transport en vrac de petites quantités de diverses marchandises telles que</p>
+				<ul>
+			    <li>Terre</li>
+			    <li>Pierres</li>
+			    <li>Paillis de cèdre</li> 
+			    <li>et plus</li>
+			  </ul>
+			</div>
+		</div>
+
+		<br>
+		<h1 class="text-uppercase" id="projets">Réalisations</h1>
+		<br>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_01.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_02.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_03.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_04.jpg" class="img-responsive">
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_05.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_06.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_07.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_08.jpg" class="img-responsive">
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_09.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_10.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_11.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_12.jpg" class="img-responsive">
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_13.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_14.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_15.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_16.jpg" class="img-responsive">
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-3">
+				<a href="#" class="thumbnail">
+					<img src="images/projets/projet_17.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-sm-9">
+			</div>
+		</div>
+	</div>
+</section>
+
+<section>
+	<div class="container">
+		<br>
+		<h1 class="text-uppercase">Équipement</h1>
+		<br>
+		<br>
 		 <div class="row">
 		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/pelle_01.jpg" class="img-responsive img-rounded" alt="pelle_01"></a>
+		 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/equipement/equipement_01.jpg" class="img-responsive" alt="equipement_01"></a>
 		 		<div id="myModal_01" class="modal fade" tabindex="-1" role="dialog">
 		  			<div class="modal-dialog">
 		    			<div class="modal-content">
@@ -31,14 +220,14 @@
 	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	      					</div>
 		        			<div class="modal-body">
-		            			<img src="images/pelle_01.jpg" class="img-responsive">
+		            		<img src="images/equipement/equipement_01.jpg" class="img-responsive">
 		        			</div>
 		    			</div>
 		  			</div>
 				</div>
 		 	</div>
 		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/pelle_02.jpg" class="img-responsive img-rounded" alt="pelle_02"></a>
+		 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/equipement/equipement_01.jpg" class="img-responsive" alt="equipement_01"></a>
 		 		<div id="myModal_02" class="modal fade" tabindex="-1" role="dialog">
 		  			<div class="modal-dialog">
 		    			<div class="modal-content">
@@ -46,14 +235,14 @@
 	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	      					</div>
 		        			<div class="modal-body">
-		            			<img src="images/pelle_02.jpg" class="img-responsive">
+		            		<img src="images/equipement/equipement_01.jpg" class="img-responsive">
 		        			</div>
 		    			</div>
 		  			</div>
 				</div>
 		 	</div>
 		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/pelle_03.jpg" class="img-responsive img-rounded" alt="pelle_03"></a>
+		 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/equipement/equipement_01.jpg" class="img-responsive" alt="equipement_01"></a>
 		 		<div id="myModal_03" class="modal fade" tabindex="-1" role="dialog">
 		  			<div class="modal-dialog">
 		    			<div class="modal-content">
@@ -61,7 +250,7 @@
 	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	      					</div>
 		        			<div class="modal-body">
-		            			<img src="images/pelle_03.jpg" class="img-responsive">
+		            		<img src="images/equipement/equipement_01.jpg" class="img-responsive">
 		        			</div>
 		    			</div>
 		  			</div>
@@ -71,97 +260,36 @@
 	</div>
 </section>
 
-<section>
-	<div class="container">
-		<h1>Réalisations</h1>
-		 <div class="row">
-		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myProjetModal_01"> <img src="images/projet_01.jpg" class="img-responsive img-rounded" alt="projet_01"></a>
-		 		<div id="myProjetModal_01" class="modal fade" tabindex="-1" role="dialog">
-		  			<div class="modal-dialog">
-		    			<div class="modal-content">
-		        			<div class="modal-header">
-	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	      					</div>
-		        			<div class="modal-body">
-		            			<img src="images/projet_01.jpg" class="img-responsive">
-		        			</div>
-		    			</div>
-		  			</div>
-				</div>
-		 	</div>
-		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myProjetModal_02"> <img src="images/projet_02.jpg" class="img-responsive img-rounded" alt="projet_02"></a>
-		 		<div id="myProjetModal_02" class="modal fade" tabindex="-1" role="dialog">
-		  			<div class="modal-dialog">
-		    			<div class="modal-content">
-		        			<div class="modal-header">
-	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	      					</div>
-		        			<div class="modal-body">
-		            			<img src="images/projet_02.jpg" class="img-responsive">
-		        			</div>
-		    			</div>
-		  			</div>
-				</div>
-		 	</div>
-		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myProjetModal_03"> <img src="images/projet_03.jpg" class="img-responsive img-rounded" alt="projet_03"></a>
-		 		<div id="myProjetModal_03" class="modal fade" tabindex="-1" role="dialog">
-		  			<div class="modal-dialog">
-		    			<div class="modal-content">
-		        			<div class="modal-header">
-	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	      					</div>
-		        			<div class="modal-body">
-		            			<img src="images/projet_03.jpg" class="img-responsive">
-		        			</div>
-		    			</div>
-		  			</div>
-				</div>
-		 	</div>
-		 </div>
-	</div>
-</section>
+<br>
+<br>
+<br>
 
-<section>
-	<div class="container">
-	    <div class="row">
-	        <div class="col-md-4">
-	          	<h2>Services</h2>
-	          	<ul>
-	          		<li>Terrassement</li>
-	          		<li>Drainage</li>
-	          		<li>Muret de roches</li>
-	          		<li>Patio et trottoir en dalles</li>
-	          		<li>Et plus</li>
-	          	</ul>
-	        </div>
-	        <div class="col-md-4">
-	          	<h2>Accréditations</h2>
-	          	<ul>
-	          		<li><i>Ajouter...</i></li>
-	          	</ul>
-	       </div>
-	       <div class="col-md-4">
-	          <h2>Contact</h2>
-	          <address>
-	          	François Daudelin<br>
-	          	450-558-8868<br>
-	          	85, rue Paquette,<br>
-	          	Shefford<br>
-	          	QC J2M 1X7<br>
-	          </address>
-	          <p><strong>RBQ: 5718-9367-01</strong><br>
-	          membre APCHQ</p>
-
+<footer class="myFooter">
+	<div class="container" id="contact">
+		<br>
+		<br>
+		<h2 class="text-center text-uppercase">Contact</h2>
+		<br>
+		<br>
+		<div class="row">
+			<div class="col-md-4">
+		          	<p>
+		          		RBQ: 5718-9367-01<br>
+		          		Membre APCHQ<br>
+		          		Carte ASP Construction
+		          	</p>
+			</div>
+			<div class="col-md-4">
+		          <address class="text-center">
+		          	François Daudelin<br>
+		          	450-558-8868<br>
+		          	85, rue Paquette, Shefford<br>
+		          	QC J2M 1X7<br>
+		          </address>
+			</div>
+			<div class="col-md-4">
 	          <small>
 				 <table class="table table-condensed">
-				 	<thead>
-				 		<tr>
-							<td class="text-uppercase">Heures d'ouverture</td>
-			 			</tr>
-				 	</thead>
 				 	<tbody>
 				 		<tr>
 				 			<td>Lundi au vendredi</td>
@@ -178,14 +306,11 @@
 				 	</tbody>
 				 </table>
 			 </small>
-	       </div>
-	    </div>
-	 </div>
- </section>
-
-<hr>
-<footer>
-	<p class="text-center text-muted">&copy; 2017 2735 7250 Québec Inc.</p>
+			</div>
+		</div>	
+		<br>
+		<p class="text-center text-muted">&copy; 2017 2735 7250 Québec Inc.</p>
+	</div>
 </footer>
 
 <script src="js/jquery-1.12.4.min.js"></script>
